<resources>
    <string name="app_name">SMB Provider</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_host">Host (name or IP)</string>
    <string name="edit_share">Share</string>
    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="server_save">Save</string>
    <string name="cancel">Cancel</string>
</resources>